--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -16,11 +16,15 @@
       "js": ["jquery.min.js", "semantic.js", "script.js", "prototype.js"]
     }
   ],
+  "content_security_policy": "script-src 'self' https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/p5.min.js; object-src 'self'",
   "icons": { 
     "64": "icons/256.png",
     "128": "icons/128.png",
     "256": "icons/256.png",
     "512": "icons/512.png",
     "1024": "icons/1024.png"
+  },
+  "browser_action": {
+    "default_popup": "html/popup.html"
   }
 }
